2006-06-10  Mark Wielaard  <mark@klomp.org>

	* lib/.cvsignore: Add sun.
	* lib/Makefile.am (dist-hook): Likewise.

2006-06-10  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	* gnu/java/awt/peer/gtk/CairoSurface.java
	* gnu/java/awt/peer/gtk/CairoSurfaceGraphics.java
	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	* gnu/java/awt/peer/gtk/GtkVolatileImage.java
	* native/jni/gtk-peer/cairographics2d.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoSurface.c
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkVolatileImage.c:
	Changed method signatures and calls to pass native pointers directly
	into the JNI code, in order to avoid costly lookups on each
	JNI call.
	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h,
	* include/gnu_java_awt_peer_gtk_CairoSurface.h,
	* include/gnu_java_awt_peer_gtk_ComponentGraphics.h,
	* include/gnu_java_awt_peer_gtk_GtkVolatileImage.h:
	Regenerated

2006-06-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 27973
	* javax/swing/text/DefaultStyledDocument.java 
	(ElementBuffer.insertContentTag):
	Do not recreate leaves and do not remove elements here. 

2006-06-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.HiddenAction): Implemented.

2006-06-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(getVolatileOffscreenBuffer): Store the created buffer.
	* javax/swing/JComponent.java
	(paintDoubleBuffered): Try to use a volatile offscreen buffer
	for better performance.

2006-06-10  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	(VolatileImageGraphics(VolatileImageGraphics)): Initialize native
	context correctly.
	(getRealBounds): Overridden to return the correct bounds.

2006-06-10  Roman Kennke  <kennke@aicas.com>
